# mprisk

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  RUN_STATUS.md  environment.yml  pyproject.toml
article/: review.txt
configs/: README.md  local_paths.example.yaml
configs/assets/: model_assets.yaml
configs/cache/: complete_cache_matrix_20260722.yaml  prefill_followup_p8_queue_v1.yaml  prefill_main_p8_v1.yaml  prefill_p8_seed20260715_v1.yaml  prefill_p8_seed20260716_v1.yaml
configs/data/: generated_round1_v1.yaml
configs/datasets/: ch_sims_v2.yaml  cmu_mosei.yaml  cmu_mosi.yaml  dfew.yaml  generated_aligned.yaml  generated_ambiguous.yaml  generated_conflict.yaml
configs/downstream/: conflict_misread_probe_internvl3_5_8b_tme_v1.yaml  conflict_misread_probe_qwen2_5_omni_7b_tme_v1.yaml  conflict_misread_probe_qwen3_primary_v1.yaml  conflict_misread_probe_v1.yaml  delivery_20260716_conflict_supervision_budget_v1.yaml  delivery_20260716_misread_budget_queue_v1.yaml  delivery_20260716_seed20260717_baselines_template_v1.yaml  delivery_20260716_seed20260717_tme_template_v1.yaml  tme_three_seed_queue_v1.yaml
configs/experiments/: baselines.yaml  diagnostic_affect_description_v1.yaml  diagnostic_affect_description_v2.yaml  generalization_panel.yaml  main_va.yaml  main_vt.yaml  qwen2_5_omni_m12_diagnostic_descriptions_v1.yaml  stage2_eval.yaml  (+11 more)
curation/: README.md  __init__.py  pyproject.toml
data/: README.md
docs/: ANNOTATION_GUIDE.md  APPENDIX_CONTENT_MAP.md  ARCHETYPE_CANONICAL_MEANINGS.md  DATA_PROTOCOL.md  DEEPSEEK_GT.md  DIAGNOSTIC_AFFECT_DESCRIPTION.md  ENVIRONMENT.md  FIGURE_MAP.md  GENERATED_ROUND1_FREEZE.md  GT_DESCRIPTION_GENERATION.md  MIND_PORTING_MAP.md  MISREAD_JUDGMENT.md  MODEL_PANEL.md  NAMING_CONVENTIONS.md  PIPELINE.md  PREFILL_CACHE_RUNTIME.md  PREFILL_CACHE_UNION.md  PROJECT_OVERVIEW.md  QWEN_OMNI_M12_DIAGNOSTIC_DESCRIPTIONS.md  QWEN_OMNI_PREFILL.md  README.md  REFERENCE_GUIDED_MISREAD_JUDGE.md  REPOSITORY_STRUCTURE.md  RESPONSE_LETTER_MAP.md
outputs/: README.md
paper/: README.md  appendix.tex  main.tex  refs.bib
requirements/: phi4-py310.txt
scripts/: README_kv_p_sweep.md  assign_state_patterns.py  audit_cache_integrity.py  benchmark_qwen_vl_prefill_generation.py  bind_delivery_representation_plan.py  build_archetype_canonical_meanings.py  build_figure_inputs.py  build_gt_annotation_input_pilot.py  build_main_result_summary.py  build_manifests.py  build_misread_figure_adapters.py  build_prefill_cache_union.py  build_prompt_cache.py  build_prompt_conditioned_cache.py  build_prompt_context_v2_pilot.py  build_prompt_pool.py  build_representation_dataset.py  build_representation_splits.py  build_run_status.py  build_state_bundles.py  build_state_dataset.py  build_template_v3_adapters.py  calibrate_spherical_state.py  compute_sdr_scores.py  export_baseline_representations.py  export_kv_latency_stability_tables.py  export_kv_p_sweep_curve.py  export_misread_figures.py  export_paper_figures.py  export_paper_tables.py  export_qwen_vl_timing_report.py  export_ready_paper_figures.py  export_state_structure_figures.py  export_template_v2_figures.py  export_template_v3_misread_figures.py  export_trained_embeddings.py  extract_prefill_batch.py  extract_prefill_cache.py  freeze_generated_round1.py  generate_diagnostic_affect_descriptions.py  (+50 more)
tests/: README.md  test_benchmark_qwen_vl_prefill_generation.py  test_cli.py  test_naming_contract.py  test_phi4_mm.py  test_plot_kv_latency_stability_tables.py  test_plot_kv_p_sweep.py
(+640 files in other folders)
