[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mprisk"
version = "0.1.0"
description = "Paper engineering repository for multimodal pre-generation misjudgment risk analysis."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
  { name = "BUAAZhangHaonan" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyyaml>=6.0",
  "pydantic>=2.6",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "torch>=2.3",
  "transformers>=4.48",
  "safetensors>=0.4",
  "tqdm>=4.66",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "joblib>=1.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
